# Differentiable-Task-Graph-Learning

./: .gitignore  LICENSE  README.md  captaincook4d_results.py  train.py  train_all.py
configs/Assembly101-O/: Count_Based.yaml  DO-with-early-stopping.yaml  DO-without-early-stopping.yaml  ILP_acc.yaml  ILP_prec.yaml  TGT.yaml
configs/Baselines/: baseline_Count_Based.yaml  baseline_Count_Based_few.yaml  baseline_ILP_acc.yaml  baseline_ILP_acc_few.yaml  baseline_ILP_prec.yaml  baseline_ILP_prec_few.yaml  evaluation_Count_Based.yaml  evaluation_ILP_acc.yaml  evaluation_ILP_prec.yaml  evaluation_LLM.yaml
configs/CaptainCook4D-DO/: Blender_Banana_Pancakes.yaml  Breakfast_Burritos.yaml  Broccoli_Stir_Fry.yaml  Butter_Corn_Cup.yaml  Caprese_Bruschetta.yaml  Cheese_Pimiento.yaml  Coffee.yaml  Cucumber_Raita.yaml  Dressed_Up_Meatballs.yaml  Herb_Omelet_with_Fried_Tomatoes.yaml  Microwave_Egg_Sandwich.yaml  Microwave_French_Toast.yaml  Microwave_Mug_Pizza.yaml  Mug_Cake.yaml  Pan_Fried_Tofu.yaml  Pinwheels.yaml  Ramen.yaml  Sauted_Mushrooms.yaml  Scrambled_Eggs.yaml  Spiced_Hot_Chocolate.yaml  Spicy_Tuna_Avocado_Wraps.yaml  Tomato_Chutney.yaml  Tomato_Mozzarella_Salad.yaml  Zoodles.yaml
configs/CaptainCook4D-TGT-text/: Blender_Banana_Pancakes.yaml  Coffee.yaml  (+22 more)
docs/: index.html
lib/: setup.cfg
lib/src/taskgraph/mistake_detection/: __init__.py  _mistake_detection.py
lib/src/taskgraph/task_graph_learning/: __init__.py  _loss.py  _models.py  _utils.py
lib/src/taskgraph/task_graph_learning/baselines/: _baseline.py  _transition_graph.py
task-graph-learning/: README.md
(+173 files in other folders)
