[metadata]
name = TGML
description = Task Graph Maximum Likelihood (FPV@IPLab)
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    taskgraph
install_requires =
    networkx==3.1,
    pandas>=2.2.0
    tqdm>=4.66.1
    matplotlib>=3.8.2
    python-box>=7.1.1
    PyYAML>=6.0.1
    click
    scikit-learn
python_requires = >= 3.9
package_dir = 
    =src
zip_safe = no